WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70643
[WK2] Crash after printing a view with accelerated compositing content
https://bugs.webkit.org/show_bug.cgi?id=70643
Summary
[WK2] Crash after printing a view with accelerated compositing content
Alexey Proskuryakov
Reported
2011-10-21 13:49:20 PDT
Steps to reproduce: 1. Open any Web page that Safari Reader can display. 2. Enter Reader. 3. Cmd+P, Cancel. 4. Cmd+P again. The problem is that -[WKView drawRect:] is not used to paint this view, so we don't have a chance to ever call endPrinting. <
rdar://problem/9479083
>
Attachments
proposed fix
(1.50 KB, patch)
2011-10-21 14:10 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-10-21 14:10:26 PDT
Created
attachment 112018
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2011-10-21 14:25:38 PDT
Committed <
http://trac.webkit.org/changeset/98153
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug