        [WK2] Crash after printing a view with accelerated compositing content         https://bugs.webkit.org/show_bug.cgi?id=70643         <rdar://problem/9479083>

Reviewed by Darin Adler.

        * UIProcess/API/mac/WKPrintingView.mm: (-[WKPrintingView _delayedResumeAutodisplayTimerFired]):
        We cannot rely on -[WKView drawRect:] calling endPrinting() for us. That call to endPrinting()
        is still necessary to paint e.g. when resizing a window while a print dialog is present.



Canonical link: https://commits.webkit.org/86837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98153 268f45cc-cd09-0410-ab3c-d52691b4dbfc