Source/WebKit2/UIProcess/API/mac/WKPrintingView.mm
@@ -91,6 +91,9 @@ static BOOL isForcingPreviewUpdate;
     
     _autodisplayResumeTimer = nil;
     [self _setAutodisplay:YES];
+
+    // Enabling autodisplay normally implicitly calls endPrinting() via -[WKView drawRect:], but not when content is in accelerated compositing mode.
+    _webFrame->page()->endPrinting();
 }
 
 - (void)_delayedResumeAutodisplay
